Send the proper mimetype for empty files (0 bytes).

BUG:323491
FIXED-IN: 4.12.4
REVIEW: 116523